# multi_robot_coordination

./: .clang-format  README.md  clang-format-all  dependencies.rosinstall  dependencies_https.rosinstall  dependencies_ssh.rosinstall
agent_local_planner/: CMakeLists.txt  package.xml
agent_local_planner/include/agent_local_planner/: agent_local_planner.h  polynomial_interpolator.h
agent_local_planner/launch/: agent_local_planner.launch  agent_local_planner_outdoor_pegasus.launch  agent_local_planner_outdoor_ueli.launch  agent_local_planner_sim.launch  agent_local_planner_vicon.launch  agent_local_planner_vins.launch
agent_local_planner/launch/outdoor_mapping/: agent_mapping_outdoor.launch  agent_mapping_outdoor_21019.launch  agent_mapping_outdoor_23026.launch
agent_local_planner/launch/vins_simulation_mapping/: agent_mapping_four_sim_0.launch  agent_mapping_four_sim_1.launch  agent_mapping_four_sim_2.launch  agent_mapping_four_sim_3.launch  agent_mapping_sim_single.launch  agent_mapping_three_sim_0.launch  agent_mapping_three_sim_1.launch  agent_mapping_three_sim_2.launch  agent_mapping_two_sim_0.launch  agent_mapping_two_sim_1.launch
agent_local_planner/src/: agent_local_planner.cpp  agent_local_planner_node.cpp  polynomial_interpolator.cpp
comm_msgs/: CMakeLists.txt  package.xml
comm_msgs/msg/: fused_pcl.msg  keyframe.msg  keypoint.msg  landmark_list.msg  pcl_transform.msg
multi_robot_coordination/: .gitignore  CMakeLists.txt  package.xml
multi_robot_global_planner/: CMakeLists.txt  package.xml
multi_robot_global_planner/cfg/: parameters.yaml  parameters_chemical_plant_exp_common_map_two.yaml  parameters_chemical_plant_four.yaml  parameters_chemical_plant_three.yaml  parameters_exp_common_map_two.yaml  parameters_four.yaml  parameters_outdoor.yaml  parameters_outdoor_single.yaml  parameters_powerplant.yaml  parameters_three.yaml  parameters_vicon.yaml  waypoints_arche_loon.yaml  waypoints_arche_single.yaml  waypoints_outdoor.yaml  waypoints_powerplant.yaml  waypoints_powerplant_intersection.yaml  waypoints_simulation.yaml  waypoints_vins.yaml  waypoints_vins_collaborative_map.yaml  waypoints_vins_three.yaml  waypoints_vins_twist.yaml  waypoints_vins_twist_three.yaml
multi_robot_global_planner/cfg/waypoints/: waypoints_chemical_plant_exp_common_map_two.yaml  waypoints_chemical_plant_four.yaml  waypoints_powerplant.yaml  waypoints_simulation.yaml
multi_robot_global_planner/include/multi_robot_global_planner/: multi_robot_global_planner.h  voxblox_ompl_rrt.h
multi_robot_global_planner/include/multi_robot_global_planner/interpolators/: polynomial_interpolator.h  ramp_interpolator.h
multi_robot_global_planner/include/multi_robot_global_planner/ompl/: altitude_objective.h  mav_setup.h  multi_agent_sampler.h  ompl_types.h  ompl_voxblox.h
multi_robot_global_planner/include/multi_robot_global_planner/utils/: color.h  typedefs.h
multi_robot_global_planner/launch/: mrp_global_planner.launch  mrp_global_planner_chemical_plant_exp_common_map.launch  mrp_global_planner_chemical_plant_four.launch  mrp_global_planner_chemical_plant_three_twist.launch  mrp_global_planner_outdoor.launch  mrp_global_planner_outdoor_single.launch  mrp_global_planner_powerplant.launch  mrp_global_planner_vicon.launch  mrp_global_planner_vins.launch  mrp_global_planner_vins_four.launch  mrp_global_planner_vins_three.launch  mrp_global_planner_vins_three_twist.launch  mrp_global_planner_vins_two_exp_common_map.launch
multi_robot_global_planner/src/: multi_robot_global_planner.cpp  multi_robot_global_planner_node.cpp  voxblox_ompl_rrt.cpp
multi_robot_global_planner/src/interpolators/: polynomial_interpolator.cpp  ramp_interpolator.cpp
multi_robot_simulation/: .gitignore  CMakeLists.txt  package.xml
multi_robot_simulation/cfg/: parameters.yaml  parameters_powerplant.yaml  parameters_vins.yaml  parameters_vins_exp_common_map.yaml  parameters_vins_four.yaml  parameters_vins_three.yaml  parameters_vins_three_twist.yaml  startup_path_vins.yaml
multi_robot_simulation/cfg/msf/: firefly_msf.yaml
multi_robot_simulation/cfg/rviz/: simulation.rviz  simulation_vins.rviz
multi_robot_simulation/cfg/vins/: vins_sim_agent_0.yaml  vins_sim_agent_1.yaml  vins_sim_agent_2.yaml  vins_sim_agent_3.yaml
multi_robot_simulation/descriptions/: component_snippets.xacro  firefly_base_gps.xacro
multi_robot_simulation/include/multi_robot_simulation/: command_interceptor.h  gps_pose_graph_initializer.h  odometry_transform_publisher.h  pointcloud_filter.h  pointcloud_transformator.h  vins_initializer.h
multi_robot_simulation/launch/: chemical_plant_voxblox_ground_truth.launch  extract_images_from_rosbag.launch  gps_pose_graph_initializer.launch  mav_sim_chemical_plant_exp_common_map.launch  mav_sim_chemical_plant_four.launch  mav_sim_chemical_plant_three_twist.launch  mav_sim_example.launch  mav_sim_four_vins.launch  mav_sim_single.launch  mav_sim_single_vins.launch  mav_sim_three_agents_powerplant.launch  mav_sim_three_powerplant.launch  mav_sim_three_vins.launch  mav_sim_three_vins_twist.launch  mav_sim_two_agents.launch  mav_sim_two_vins.launch  mav_sim_two_vins_exp_common_map.launch  simulated_backend.launch  simulated_backend_powerplant.launch  simulated_backend_single.launch  spawn_mav.launch  vins_sim.launch  voxblox_standalone.launch
multi_robot_simulation/rviz/: share_map.rviz  simulation.rviz  simulation_2_agents.rviz  simulation_3_agents.rviz  twist.rviz  video_model.rviz
multi_robot_simulation/src/: command_interceptor.cpp  command_interceptor_node.cpp  gps_interceptor_node.cpp  gps_pose_graph_initializer.cpp  gps_pose_graph_initializer_node.cpp  odometry_transform_publisher.cpp  odometry_transform_publisher_node.cpp  pointcloud_filter.cpp  pointcloud_filter_node.cpp  pointcloud_transformator.cpp  pointcloud_transformator_node.cpp  vins_initializer.cpp  vins_initializer_node.cpp
multi_robot_simulation/worlds/: chemical-plant.world  chemical-plant_ground_truth.world  powerplant.world  urban.world  vins_test.world
posegraph_msgs/: CMakeLists.txt  package.xml
(+3 files in other folders)
