<?xml version="1.0"?>
<package format="2">
  <name>agent_local_planner</name>
  <version>0.0.1</version>
  <description>
    Local planner based on EWOK and 3D Octomap circular buffer
  </description>

  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>

  <depend>eigen_conversions</depend>
  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>mav_msgs</depend>
  <depend>suitesparse</depend>
  <depend>ewok_poly_spline</depend>
  <depend>ewok_optimization</depend>
  <depend>ewok_ring_buffer</depend>
  <depend>mav_trajectory_generation</depend>

</package>
