<?xml version="1.0"?>
<package>
  <name>comm_msgs</name>
  <version>0.0.0</version>
  <description>Custom message to send keyframe data</description>
  <maintainer email="marco.karrer@mavt.ethz.ch">Marco Karrer</maintainer>
  <author>Marco Karrer</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>  

  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend> 

</package>
