<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_global_planner</name>
  <version>0.0.1</version>
  <description>
    Global planner based on voxblox to be run on the server.
  </description>

  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>ompl</depend>
  <depend>voxblox_ros</depend>
  <depend>mav_msgs</depend>
  <depend>geodetic_utils</depend>
  <depend>mav_trajectory_generation</depend>

</package>
