<?xml version="1.0"?>
<package format="2">
  <name>multi_robot_simulation</name>
  <version>0.0.1</version>
  <description>
    Multi-robot simulation wrapper for Gazebo.
  </description>

  <author email="lbartolomei@ethz.ch">Luca Bartolomei</author>
  <maintainer email="lbartolomei@ethz.ch">Luca Bartolomei</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <depend>glog_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>mav_msgs</depend>
  <depend>posegraph_msgs</depend>
  <depend>mav_trajectory_generation_ros</depend>
</package>
